<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_color"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/txtnombre"
        android:layout_width="141dp"
        android:layout_height="51dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.333" />

    <EditText
        android:id="@+id/txtapellido"
        android:layout_width="157dp"
        android:layout_height="52dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="45dp"
        android:ems="10"
        android:hint="@string/apellido"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toEndOf="@+id/txtnombre"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="16dp"
        android:text="@string/sexo"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtapellido" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="345dp"
        android:layout_height="126dp"
        android:checkedButton="@id/rbvaron"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_editor_absoluteX="35dp">

        <RadioButton
            android:id="@+id/rbmujer"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="12dp"
            android:text="@string/mujer"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <RadioButton
            android:id="@+id/rbvaron"
            android:layout_width="259dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="12dp"
            android:text="@string/varon"
            android:textColor="@color/white" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="20dp"
        android:text="@string/Materias"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <CheckBox
        android:id="@+id/m1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="15dp"
        android:text="@string/m1"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <CheckBox
        android:id="@+id/m2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/m2"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/m1"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <CheckBox
        android:id="@+id/m3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/m3"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/m2"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <CheckBox
        android:id="@+id/m4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="4dp"
        android:text="@string/m4"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/m1" />

    <CheckBox
        android:id="@+id/m5"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:text="@string/m5"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/m4"
        app:layout_constraintTop_toBottomOf="@+id/m2" />

    <CheckBox
        android:id="@+id/m6"
        android:layout_width="143dp"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:text="@string/m6"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/m5"
        app:layout_constraintTop_toBottomOf="@+id/m3" />

    <EditText
        android:id="@+id/ci"
        android:layout_width="131dp"
        android:layout_height="46dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/ci"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/m4" />

    <EditText
        android:id="@+id/telefono"
        android:layout_width="210dp"
        android:layout_height="46dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/cel"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toEndOf="@+id/ci"
        app:layout_constraintTop_toBottomOf="@+id/m6" />

    <EditText
        android:id="@+id/txtdireccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/dom"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ci" />

    <EditText
        android:id="@+id/txtcorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/co"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtdireccion" />

    <Button
        android:id="@+id/button"
        android:layout_width="191dp"
        android:layout_height="52dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="15dp"
        android:onClick="boton"
        android:text="@string/hecho"
        app:backgroundTint="@color/design_default_color_secondary_variant"
        app:icon="@android:drawable/ic_menu_send"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtcorreo" />

</androidx.constraintlayout.widget.ConstraintLayout>